# c-templates

cmake_module/: CMakeLists.txt  main.c
cmake_module/inc/: module.h
cmake_module/src/: module.c
cmake_module_check/: CMakeLists.txt
cmake_module_check/inc/: module.h
cmake_module_check/src/: module.c
cmake_module_check/tests/: test_module.c
cmake_simple/: CMakeLists.txt
cmake_simple/src/: main.c
